RESOLVED FIXED 22118
[Transforms] Clicks on the textfield resize handle fail in transformed elements
https://bugs.webkit.org/show_bug.cgi?id=22118
Summary [Transforms] Clicks on the textfield resize handle fail in transformed elements
Simon Fraser (smfr)
Reported 2008-11-06 17:14:08 PST
When a <textarea> is inside a transformed element, clicks on the resize handle don't work.
Attachments
Patch, testcase, changelog (8.88 KB, patch)
2008-11-16 11:33 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2008-11-06 17:35:02 PST
Some weird code here. EventHandler caches m_offsetFromResizeCorner, and the resize code is in RenderLayer, not, for example, RenderTextControl or TextControlInnerTextElement.
Simon Fraser (smfr)
Comment 2 2008-11-06 17:37:28 PST
This code is using RenderLayer::convertToLayerCoords() to map points from absolute to local coords, and that codepath is no transform-aware. Teh suck.
Simon Fraser (smfr)
Comment 3 2008-11-16 11:33:44 PST
Created attachment 25198 [details] Patch, testcase, changelog
mitz
Comment 4 2008-11-16 19:27:44 PST
Comment on attachment 25198 [details] Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 5 2008-11-16 19:46:59 PST
Note You need to log in before you can comment on or make changes to this bug.