2008-11-16  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=22118

        Fix resize corner tracking in transformed elements by using
        mapping the point into local coords using absoluteToLocal,
        rather than convertToLayerCoords.

        Test: fast/css/resize-corner-tracking-transformed.html

        * page/EventHandler.h:
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::absoluteToContents):
        (WebCore::RenderLayer::offsetFromResizeCorner):
        (WebCore::RenderLayer::isPointInResizeControl):
        * rendering/RenderLayer.h:


Canonical link: https://commits.webkit.org/30687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38474 268f45cc-cd09-0410-ab3c-d52691b4dbfc