WebCore/rendering/RenderLayer.h
@@ -235,9 +235,9 @@ public:
     int horizontalScrollbarHeight() const;
 
     void positionOverflowControls(int tx, int ty);
-    bool isPointInResizeControl(const IntPoint&);
+    bool isPointInResizeControl(const IntPoint& absolutePoint) const;
     bool hitTestOverflowControls(HitTestResult&);
-    IntSize offsetFromResizeCorner(const IntPoint&) const;
+    IntSize offsetFromResizeCorner(const IntPoint& absolutePoint) const;
 
     void paintOverflowControls(GraphicsContext*, int tx, int ty, const IntRect& damageRect);
     void paintScrollCorner(GraphicsContext*, int tx, int ty, const IntRect& damageRect);
@@ -373,6 +373,9 @@ private:
     bool paintingInsideReflection() const { return m_paintingInsideReflection; }
 
     RenderLayer* enclosingTransformedAncestor() const;
+
+    // Convert a point in absolute coords into layer coords, taking transforms into account
+    IntPoint absoluteToContents(const IntPoint&) const;
 
     void updateScrollCornerStyle();
     void updateResizerStyle();
